--- a/app/views/noi_analyse/noi.html
+++ b/app/views/noi_analyse/noi.html
@@ -206,73 +206,73 @@
                                 <tbody>
                                 <tr class="tr-main">
                                     <td ng-repeat="tdData in noiCtrl.incomeData[3].values |skip:1"
-                                        ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|numberFormat:$index:2}}</td>
+                                        ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|default:"-"|numberFormat:$index:2}}</td>
                                     <td>{{34.97|number:2}}%</td>
                                 </tr>
                                 <tr class="tr-sub">
                                     <td ng-repeat="tdData in noiCtrl.incomeData[0].values|skip:1"
-                                        ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|numberFormat:$index:2}}</td>
+                                        ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|default:"-"|numberFormat:$index:2}}</td>
                                     <td></td>
                                 </tr>
                                 <tr class="tr-sub">
                                     <td ng-repeat="tdData in noiCtrl.incomeData[1].values|skip:1"
-                                        ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|numberFormat:$index:2}}</td>
+                                        ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|default:"-"|numberFormat:$index:2}}</td>
                                     <td></td>
                                 </tr>
 
                                 <!-- start -->
                                 <tr class="tr-sub">
                                     <td ng-repeat="tdData in noiCtrl.incomeData[2].values|skip:1"
-                                        ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|numberFormat:$index:2}}</td>
+                                        ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|default:"-"|numberFormat:$index:2}}</td>
                                 </tr>
 
                                 <tr class="tr-main">
                                     <td ng-repeat="tdData in noiCtrl.feeData[15].values|skip:1"
-                                        ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|numberFormat:$index:2}}</td>
+                                        ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|default:"-"|numberFormat:$index:2}}</td>
                                     <td>{{46.71}}%</td>
 
                                 </tr>
                                 <tr class="tr-sub">
                                     <td ng-repeat="tdData in noiCtrl.feeData[0].values|skip:1"
-                                        ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|numberFormat:$index:2}}</td>
+                                        ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|default:"-"|numberFormat:$index:2}}</td>
                                     <td></td>
 
                                 </tr>
 
                                 <tr class="tr-sub">
                                     <td ng-repeat="tdData in noiCtrl.feeData[1].values|skip:1"
-                                        ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|numberFormat:$index:2}}</td>
+                                        ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|default:"-"|numberFormat:$index:2}}</td>
                                     <td></td>
 
                                 </tr>
 
                                 <tr class="tr-sub">
                                     <td ng-repeat="tdData in noiCtrl.feeData[2].values|skip:1"
-                                        ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|numberFormat:$index:2}}</td>
+                                        ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|default:"-"|numberFormat:$index:2}}</td>
 
 
                                 </tr>
 
                                 <tr class="tr-sub tr-sub-main">
                                     <td ng-repeat="tdData in noiCtrl.feeData[3].values|skip:1"
-                                        ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|numberFormat:$index:2}}</td>
+                                        ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|default:"-"|numberFormat:$index:2}}</td>
                                     <td></td>
 
                                 </tr>
 
                                 <tr class="tr-tri">
                                     <td ng-repeat="tdData in noiCtrl.feeData[4].values|skip:1"
-                                        ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|numberFormat:$index:2}}</td>
+                                        ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|default:"-"|numberFormat:$index:2}}</td>
 
                                 </tr>
                                 <tr class="tr-tri">
                                     <td ng-repeat="tdData in noiCtrl.feeData[5].values|skip:1"
-                                        ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|numberFormat:$index:2}}</td>
+                                        ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|default:"-"|numberFormat:$index:2}}</td>
 
                                 </tr>
                                 <tr class="tr-tri">
                                     <td ng-repeat="tdData in noiCtrl.feeData[6].values|skip:1"
-                                        ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|numberFormat:$index:2}}</td>
+                                        ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|default:"-"|numberFormat:$index:2}}</td>
                                     <td></td>
 
                                 </tr>
@@ -281,50 +281,50 @@
 
                                 <tr class="tr-sub">
                                     <td ng-repeat="tdData in noiCtrl.feeData[7].values|skip:1"
-                                        ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|numberFormat:$index:2}}</td>
+                                        ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|default:"-"|numberFormat:$index:2}}</td>
 
                                 </tr>
 
                                 <tr class="tr-sub">
                                     <td ng-repeat="tdData in noiCtrl.feeData[8].values|skip:1"
-                                        ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|numberFormat:$index:2}}</td>
+                                        ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|default:"-"|numberFormat:$index:2}}</td>
                                     <td></td>
                                 </tr>
 
                                 <tr class="tr-sub">
                                     <td ng-repeat="tdData in noiCtrl.feeData[9].values|skip:1"
-                                        ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|numberFormat:$index:2}}</td>
+                                        ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|default:"-"|numberFormat:$index:2}}</td>
                                     <td></td>
 
                                 </tr>
 
                                 <tr class="tr-sub">
                                     <td ng-repeat="tdData in noiCtrl.feeData[10].values|skip:1"
-                                        ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|number:2}}</td>
+                                        ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|default:"-"|number:2}}</td>
                                     <td></td>
                                 </tr>
 
                                 <tr class="tr-sub">
                                     <td ng-repeat="tdData in noiCtrl.feeData[11].values|skip:1"
-                                        ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|numberFormat:$index:2}}</td>
+                                        ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|default:"-"|numberFormat:$index:2}}</td>
                                     <td></td>
                                 </tr>
 
                                 <tr class="tr-sub">
                                     <td ng-repeat="tdData in noiCtrl.feeData[12].values|skip:1"
-                                        ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|numberFormat:$index:2}}</td>
+                                        ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|default:"-"|numberFormat:$index:2}}</td>
                                     <td></td>
                                 </tr>
 
                                 <tr class="tr-sub">
                                     <td ng-repeat="tdData in noiCtrl.feeData[13].values|skip:1"
-                                        ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|numberFormat:$index:2}}</td>
+                                        ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|default:"-"|numberFormat:$index:2}}</td>
                                     <td></td>
                                 </tr>
 
                                 <tr class="tr-sub">
                                     <td ng-repeat="tdData in noiCtrl.feeData[14].values|skip:1"
-                                        ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|numberFormat:$index:2}}</td>
+                                        ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|default:"-"|numberFormat:$index:2}}</td>
                                     <td></td>
                                 </tr>
                                 <!-- end -->
@@ -332,12 +332,12 @@
                                 <tfoot>
                                 <tr class="tr-main">
                                     <td ng-repeat="tdData in noiCtrl.feeData[16].values|skip:1"
-                                        ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|numberFormat:$index:2}}</td>
+                                        ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|default:"-"|numberFormat:$index:2}}</td>
 
                                 </tr>
                                 <tr class="tr-sub">
                                     <td ng-repeat="tdData in noiCtrl.feeData[17].values|skip:1"
-                                        ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|percentFormat}}</td>
+                                        ng-class="{'t-split':noiCtrl.isSplit($index)}">{{tdData.value|default:"-"|percentFormat}}</td>
 
                                 </tr>
                                 </tfoot>
